@@ -860,7 +860,6 @@ function updateTile( tiledImage, drawLevel, haveDrawn, x, y, level, levelOpacity
     if (!tile.loaded) {
         var imageRecord = tiledImage._tileCache.getImageRecord(tile.url);
         if (imageRecord) {
-            tile.loaded = true;
             var image = imageRecord.getImage();
             setTileLoaded(tiledImage, tile, image);
         }
